maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:37: error: not found: value min
      setIndication(listeX(i),listeY(i),min(c,getIndication(listeX(i),listeY(i))))
                                        ^